--- a/bbsdemo/src/main/resources/application.properties
+++ b/bbsdemo/src/main/resources/application.properties
@@ -23,3 +23,10 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 # logger
 logging.level.com.coderbbs.bbsdemo=INFO
 logging.path=./logs
+
+# Mail properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=465
+spring.mail.username=weiy650316@gmail.com
+spring.mail.password=a115945243
+spring.mail.properties.mail.smtp.ssl.enable=true
