login and sign up

--- a/bbsdemo/src/main/resources/application.properties
+++ b/bbsdemo/src/main/resources/application.properties
@@ -30,3 +30,6 @@ spring.mail.port=465
 spring.mail.username=weiy650316@gmail.com
 spring.mail.password=a115945243
 spring.mail.properties.mail.smtp.ssl.enable=true
+
+# community
+community.path.domain=http://localhost:8080
