login continue and logout

--- a/bbsdemo/src/main/resources/application.properties
+++ b/bbsdemo/src/main/resources/application.properties
@@ -21,7 +21,7 @@ mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # logger
-logging.level.com.coderbbs.bbsdemo=INFO
+logging.level.com.coderbbs.bbsdemo=DEBUG
 logging.path=./logs
 
 # Mail properties
