--- a/bbsdemo/src/main/resources/application.properties
+++ b/bbsdemo/src/main/resources/application.properties
@@ -33,3 +33,4 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 
 # community
 community.path.domain=http://localhost:8080
+community.path.upload=C:/Users/14597/bbsproject/bbsdemo/bbsdemo/upload
