--- a/bbsdemo/pom.xml
+++ b/bbsdemo/pom.xml
@@ -86,6 +86,19 @@
 			<version>2.0.33</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-redis -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
