--- a/bbsdemo/src/main/resources/application.properties
+++ b/bbsdemo/src/main/resources/application.properties
@@ -36,6 +36,7 @@ community.path.domain=http://localhost:8080
 community.path.upload=C:/Users/14597/bbsproject/bbsdemo/bbsdemo/upload
 
 # redis properties
-spring.redis.database = 11
-spring.redis.host = localhost
-spring.redis.port = 6379
+spring.redis.database=0
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.password=
