optimize login function by redis

--- a/bbsdemo/pom.xml
+++ b/bbsdemo/pom.xml
@@ -102,6 +102,13 @@
 			<artifactId>commons-pool2</artifactId>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka -->
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
+
 
 	</dependencies>
 
