--- a/bbsdemo/src/main/resources/application.properties
+++ b/bbsdemo/src/main/resources/application.properties
@@ -35,8 +35,14 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 community.path.domain=http://localhost:8080
 community.path.upload=C:/Users/14597/bbsproject/bbsdemo/bbsdemo/upload
 
-# redis properties
+# RedisProperties
 spring.redis.database=0
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password=
+
+# KafkaProperties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=community-consumer-group
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.auto-commit-interval=3000
