--- a/bbsdemo/src/main/resources/application.properties
+++ b/bbsdemo/src/main/resources/application.properties
@@ -21,7 +21,7 @@ mybatis.configuration.useGeneratedKeys=true
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # logger
-logging.level.com.coderbbs.bbsdemo=DEBUG
+logging.level.com.coderbbs.bbsdemo=debug
 logging.path=./logs
 
 # Mail properties
@@ -58,3 +58,18 @@ spring.task.execution.pool.queue-capacity=100
 
 # TaskSchedulingProperties
 spring.task.scheduling.pool.size=5
+
+# QuartzProperties
+spring.quartz.job-store-type=jdbc
+spring.quartz.scheduler-name=communityScheduler
+spring.quartz.properties.org.quartz.scheduler.instanceId=AUTO
+org.quartz.jobStore.class=org.springframework.scheduling.quartz.LocalDataSourceJobStore
+spring.quartz.properties.org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+spring.quartz.properties.org.quartz.jobStore.isClustered=true
+spring.quartz.properties.org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
+spring.quartz.properties.org.quartz.threadPool.threadCount=5
+
+# caffeine
+caffeine.posts.max-size=15
+caffeine.posts.expire-seconds=180
+
